# cubicLife

./: CMakeLists.txt  LICENSE  README.md
libs/filesystem/include/filesystem/: filesystem.h
libs/filesystem/src/: filesystem.cpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/image/src/: stb_image.cpp
libs/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp
shaders/: cell.frag.glsl  cell.vert.glsl  cube.frag.glsl  cube.vert.glsl  skybox.frag.glsl  skybox.vert.glsl  vox.frag.glsl  vox.vert.glsl
src/: main.cpp
src/camera/: camera.cpp  camera.h
src/config/: config.hpp
src/configs/: configs.hpp
src/core/: IWindow.hpp  camera.cpp  camera.h  engine.cpp  engine.h  gui.cpp  gui.h  input.cpp  input.h  io.hpp  shader.cpp  shader.h  window.cpp  window.h
src/cube/: cube.cpp  cube.h
src/engine/: engine.cpp  engine.h
src/gui/: gui.cpp  gui.h
src/input/: input.cpp
src/mesh/: mesh.cpp  mesh.h  texture.cpp
src/model/: mesh.cpp  mesh.h  model.cpp  model.h  texture.cpp
src/renderer/: IWindow.hpp  gui.cpp  gui.h  renderer.cpp  renderer.h  shader.cpp  skybox.cpp  skybox.h  window.h
src/renderer/mesh/: IMesh.hpp  cellMesh.cpp  cellMesh.h  skyboxMesh.cpp  skyboxMesh.h  texture.cpp
src/shader/: shader.cpp  shader.h
src/shaders/: skybox.vert.glsl
src/utils/: key.hpp
src/window/: IWindow.hpp  window.cpp  window.h
src/world/: cell.cpp  cell.h  cube.cpp  cube.h  hash.hpp  skybox.cpp  skybox.h  states.hpp  terrain.cpp  terrain.h  world.cpp  world.h  worldBuilder.cpp  worldBuilder.h
src/world/mesh/: IMesh.hpp  cellMesh.cpp  cellMesh.h  cubeMesh.cpp  cubeMesh.h  mesh.cpp  mesh.h  skyboxMesh.cpp  skyboxMesh.h  texture.cpp  texture.h
